added second collection. with models and validation files
