# routes/index.js
@@ -1,9 +1,12 @@
 const router = require('express').Router();
 
 router.get('/', (req, res) =>{
+    // #swagger.tags = ['Home']
     res.send('Hi there!')
 });
 
 router.use('/products', require('./products'));
+
+router.use('/users', require('./users'));
 
 module.exports = router;
